--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Ela Jalil Resume</title>
-        <style>
-            h1{
-               font-size:36px;
-               color:blue;
-
-            }
-        </style>
+       
         </head>
         <body>
         <!--I built this myself!-->  
             <h1>Ela Jalil</h1>
             
             <br>
-            <img src="Jalil_resume.JPG" alt="Ela Jalil headshot" width="300px">
+            <!--img src="Jalil_resume.JPG" alt="Ela Jalil headshot" width="300px"!-->
         <ul>
             <li>ejalil@terpmail.umd.edu</li>
             <li><a href="https://www.linkedin.com/in/ela-jalil-642595205/">LinkedIn</a></li>
