--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,5 +1,5 @@
-<div id="container">
 <!DOCTYPE html>
+<div id="container">
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
@@ -64,4 +64,5 @@
 
 
         </body>
+     </div>
 </html>
