--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<div id="container">
-<html>
+<!DOCTYPE html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Ela Jalil Resume</title>
        
      </head>
      <body>
+          <div id="container">
         <!--I built this myself!-->  
             <div id="name">Ela Jalil</div>
             
@@ -62,7 +61,7 @@
 
 
 
-
+     </div>
         </body>
      </div>
 </html>
