--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Ela Jalil Resume</title>
@@ -63,5 +63,4 @@
 
      </div>
         </body>
-     </div>
 </html>
