--- a/bootstrap-template/<!doctype html>.html
+++ b/bootstrap-template/<!doctype html>.html
@@ -26,31 +26,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Current Issues</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link" href="#">Past Issues</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="#">Follow Us</a>
           </li>
+    
         </ul>
        
       </div>
     </div>
 
   </nav>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+  </a>
+</nav>
   <!-- Navbar end-->
    <!-- Hero start-->
  <div class="px-4 py-5 my-5 text-center">
