--- a/bootstrap-template/bootstrap practice.html
+++ b/bootstrap-template/bootstrap practice.html
@@ -80,9 +80,13 @@
     <h2>Lorem ipsum dolor sit amet</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" max-width="500px" loading="lazy">
+      <br>
     <button type="button" class="btn btn-dark">Read now</button>
   </div>
 </div>
+<!--End row-->
+<br>
+<br>
 <div class="container">
 	<div class="row">
 
@@ -107,6 +111,7 @@
 			
 	</div>
 </div>
+<!--End row-->
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container">
     <span class="text-muted">This is a bootstrap exercise</span>
