--- a/jalil-layout/index.html
+++ b/jalil-layout/index.html
@@ -10,7 +10,8 @@
   <img src="images/new header.png" width="100%" height="25%">
   <div id="content">
  <h1>
- Jerusalem Tattoo Artist Inks Pilgrims, Priests and Those Scarred by Conflict
+ Worlds Oldest Tattoo Parlor Offers Services to All, Creating New Traditions
+ 
 </h1>
 For Wassim Razzouk, Holy Week is his busiest time as Christians seek a reminder of their visit to Jerusalem. But his family’s centuries-old tattoo business caters to all faiths.
 <br>
