--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,6 +10,7 @@
 <body>
   <img src="images/celebrity corner.png">
   <div id="content">
+    <!--New headline-->
   <h1>
     SZA Keeps it Real About her Success 
   </h1>
@@ -69,16 +70,17 @@ SZA’s mother, Audrey Rowe, was an executive at AT&T when she was growing up, a
 </p>
 
 <h2>A non-linear path to success</h2>
+<iframe
+style="border-radius:12px"
+src="https://open.spotify.com/embed/album/07w0rG5TETcyihsEIZR3qG?utm_source=g
+enerator"
+width="100%" height="352" frameBorder="0" allowfullscreen=""
+allow="autoplay; clipboard-write; encrypted-media; fullscreen;
+picture-in-picture" loading="lazy"></iframe>
 <p>
 Unlike a lot of artists who grew up always wanting to be a singer and/or famous, SZA’s path to music wasn’t linear. After graduating high school, she enrolled at a nearby HBCU, Delaware State University, to study marine biology. She says she earned straight A’s for two semesters, then lost interest. “I’m like, ‘I told you I was smart and I proved my point. I have to leave now,’” SZA says. She stopped going to class and “completely flunked out of school and stopped working at jobs that make any sense to other people,” she explains.
 </p>
-<img src="images/sza3.jpg">
-  <div id="caption">
-    Skirt, Who Decides War, $4,500. Necklace, Tiffany & Co. Rings, Bulgari.
-    <div id="credit">
-      Renell Medrano
-    </div>
-  </div>
+
 <p>
 In retrospect, she regrets what she put her parents through. “I really disrespected my parents for a long time....Me telling my mom I would rather go run in the streets and bartend at the strip club so I can pay for studio time [than go to school]. It’s crazy,” she says, shaking her head.
 </p>
@@ -91,7 +93,13 @@ At the time SZA was signed, Kendrick Lamar was TDE’s flagship artist thanks to
 <p>
 SZA’s scrappy nature managed to prevail over the inevitable bumps that come along with acclimating oneself to a new team. Brick by brick, hit by hit, SZA has shown and proved her way to becoming a top artist for both TDE and her parent label RCA. And with Lamar’s recent departure in 2021, there’s no question that she’s her primary label’s frontrunner.
 </p>
-
+<img src="images/sza3.jpg">
+  <div id="caption">
+    Skirt, Who Decides War, $4,500. Necklace, Tiffany & Co. Rings, Bulgari.
+    <div id="credit">
+      Renell Medrano
+    </div>
+  </div>
 <p>
 Getting the respect she deserves for the points she has put on the board matters more to SZA than being liked or popular. “I try not to care too much because I really had some deep disappointments when I would just be so invested. But I can’t invest because none of it is real. Even if I win a bunch of Grammys, that shit doesn’t matter. It would be so cool. But also I would not be surprised at all if I didn’t win any [more]. Because that’s just how shit goes. But that’s why the tour matters to me. ‘Cause it’s like, No, we packed out these stadiums all over the country and that was real. That’s why I can’t let up, because at the end of the day it was like, yeah, [whatever haters say] is good and well, but just make sure you add, we have sold-out dates in all arenas. Make sure you tell them that we sold out the Forum twice and we could have done it four times. Make sure you tell them that I was in the air, and that my mic was on.”
 </p>
@@ -131,13 +139,7 @@ At times, it almost feels like SZA is incapable of not impulsively saying or doi
 <p>
 This sort of rap-battle mentality tracks with SZA’s personality. She operates best when challenged. It’s the fuel that converts her insecurities into the necessary ego-driven energy it takes to be, as Beyoncé would say, that girl. “If it was time for me to go to war with a bitch based on my talents alone, I would come out victorious because there’s something inside of me that wants to devour someone’s soul,” she says, looking me dead in the eye for emphasis before switching back to the friendly demeanor we had for most of the interview. But at the end of the day, she knows the opponent she ultimately has to prove herself to is that voice inside her head. “I’m just waiting until I finish proving points to myself,” she says. “‘Cause that’s what all this is about, really. I do music to prove that I have value to myself. Because what else am I going to do, in terms of how I help people? Me being whoever I’m led to be on this journey must be part of the work ‘cause it’s really hard emotionally....My prayer is to see myself the way God sees me. Like, ‘Father, help me know my value and trust that I’m valuable, and that I am who You say I am.’”
 </p>
-<iframe
-style="border-radius:12px"
-src="https://open.spotify.com/embed/album/07w0rG5TETcyihsEIZR3qG?utm_source=g
-enerator"
-width="100%" height="352" frameBorder="0" allowfullscreen=""
-allow="autoplay; clipboard-write; encrypted-media; fullscreen;
-picture-in-picture" loading="lazy"></iframe>
+
 <h3>
   Read More
 </h3>
