final resume project

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -19,7 +19,7 @@
     Published: May 31, 2023
   </div>
   <br>
-  <img src="images/sza1 (1).jpg">
+  <img class="unique-img" src="images/sza1 (1).jpg">
   <div id="caption">
     Shirtdress, Mowalola. Rings, Bulgari.
     <div id="credit">
