--- a/final-resume/final project.html
+++ b/final-resume/final project.html
@@ -136,7 +136,7 @@
                   </ul>
               </div>
               </div>
-              </div>r
+              </div>
                     <br><br>
          
           <footer class="footer mt-auto py-3 bg-dark">
