--- a/taylor-swift/taylor-swift.html
+++ b/taylor-swift/taylor-swift.html
@@ -157,7 +157,7 @@
     
    
   </div>
-  <footer class="footer mt-auto py-3 bg-dark">
+  <footer class="footer mt-auto py-3 bg-dark>
     <div class="container">
     </div>
   </footer>
